playlist add and delete events, additional modules

--- a/resources/web/ytplayer/index.html
+++ b/resources/web/ytplayer/index.html
@@ -66,15 +66,15 @@
                                 <div class="play-pause-controls">
                                     <div class="btn-group btn-group-justified">
                                         <!-- Play and pause button handled in js -->
-                                        <button type="button" class="btn btn-secondary btn-sm" id="pause-button" data-toggle="tooltip" title="Play song">
+                                        <button type="button" class="btn btn-secondary btn-sm" id="pause-button" data-toggle="tooltip" title="Play">
                                             <i class="fas fa-play" id="play-pause-button"></i>
                                         </button>
                                         <!-- Next song button -->
-                                        <button type="button" class="btn btn-secondary btn-sm" id="skip-button" data-toggle="tooltip" title="Skip song">
+                                        <button type="button" class="btn btn-secondary btn-sm" id="skip-button" data-toggle="tooltip" title="Skip">
                                             <i class="fas fa-fast-forward"></i>
                                         </button>
                                         <!-- Add to playlist button -->
-                                        <button type="button" class="btn btn-secondary btn-sm" id="fav-button" data-toggle="tooltip" title="Add to playlist (steal song)">
+                                        <button type="button" class="btn btn-secondary btn-sm" id="fav-button" data-toggle="tooltip" title="Add to playlist">
                                             <i class="fas fa-star"></i>
                                         </button>
                                         <!-- delete from playlist button -->
@@ -97,7 +97,7 @@
                                 <!-- Volume controls -->
                                 <div class="mute-control">
                                     <!-- Add to playlist button -->
-                                    <button type="button" class="btn btn-secondary btn-sm" id="mute-button" data-toggle="tooltip" title="Mute song">
+                                    <button type="button" class="btn btn-secondary btn-sm" id="mute-button" data-toggle="tooltip" title="Mute">
                                         <i class="fas fa-volume-down" id="mute-button-icon"></i>
                                     </button>
                                 </div>
@@ -162,16 +162,22 @@
                         <div class="queue-section-title">Playlist <span id="playlist-name"></span>
                             <div class="btn-group btn-group-justified header-button">
                                 <!-- Add song to playlist button -->
-                                <button type="button" class="btn btn-secondary btn-sm" id="playlist-add-song-button" data-toggle="tooltip" title="Add song">
+                                <button type="button" class="btn btn-secondary btn-sm" id="playlist-add-playlist-button" data-toggle="tooltip" title="Add playlist">
                                     <i class="fas fa-plus"></i>
                                 </button>
                                 <!-- Shuffle button -->
-                                <button type="button" class="btn btn-secondary btn-sm" id="playlist-shuffle-button" data-toggle="tooltip" title="Shuffle songs">
+                                <button type="button" class="btn btn-secondary btn-sm" id="playlist-shuffle-button" data-toggle="tooltip" title="Shuffle playlist">
                                     <i class="fas fa-random"></i>
                                 </button>
                                 <!-- Load playlist button -->
                                 <button type="button" class="btn btn-secondary btn-sm" id="load-playlist-button" data-toggle="tooltip" title="Load playlist">
                                     <i class="fas fa-upload"></i>
+                                </button>
+                                <button type="button" class="btn btn-secondary btn-sm" id="delete-playlist-button" data-toggle="tooltip" title="Delete playlist">
+                                   <i class="fas fa-trash"></i>
+                               </button>
+                               <button type="button" class="btn btn-secondary btn-sm" id="settings-button" data-toggle="tooltip" title="Settings">
+                                    <i class="fas fa-cog"></i>
                                 </button>
                             </div>
                         </div>
